--- a/Login.html
+++ b/Login.html
@@ -4,6 +4,8 @@
   </head>
   <body>
     <input type = "firstname" id = "fname" value = "">
+    <input type = "lastname" id = "lname" value = "">
+    <input type = "submit>
   </body>
 
 </html>
