Full Name Added

--- a/Login.html
+++ b/Login.html
@@ -5,6 +5,7 @@
   <body>
     <input type = "firstname" id = "fname" value = "">
     <input type = "lastname" id = "lname" value = "">
+        <input type = "fullname" id = "fname" value = "">
     <input type = "submit>
   </body>
 
